<resources>
    <string name="app_name">BufunfaTech</string>
    <string name="app_details">Gestão Financeira</string>
    <string name="new_transaction">Nova Transação</string>
    <string name="category">Categoria</string>
    <string name="comida">Comida</string>
    <string name="shopping">Shopping</string>
    <string name="transporte">Transporte</string>
    <string name="saude">Saúde</string>
    <string name="outros">Outros</string>
    <string name="educacao">Educação</string>
    <string name="amount">Quantia</string>
    <string name="title">Título</string>
    <string name="date">Data</string>
    <string name="note">Observação</string>
    <string name="add_transaction">Adicionar Transação</string>
    <string name="back">Voltar</string>
    <string name="details">Detalhes</string>
    <string name="add_few_details_before_you_continue">Adicione alguns detalhes antes de continuar…</string>
    <string name="your_name">Seu Nome</string>
    <string name="next">Próximo</string>
    <string name="name_">Nome :</string>
    <string name="are_you_sure_want_to_delete_the_transaction">Tem certeza que deseja excluir a transação?</string>
    <string name="cancel">Cancelar</string>
    <string name="delete">Deletar</string>
    <string name="logo">Logo</string>
    <string name="all">Todos</string>
    <string name="monthly">Mensal</string>
    <string name="yearly">Anual</string>
    <string name="all_transactions">Todas Transações</string>
    <string name="january">Janeiro</string>
    <string name="february">Fevereiro</string>
    <string name="march">Março</string>
    <string name="april">Abril</string>
    <string name="may">Maio</string>
    <string name="june">Junho</string>
    <string name="july">Julho</string>
    <string name="august">Agosto</string>
    <string name="september">Setembro</string>
    <string name="october">Outubro</string>
    <string name="november">Novembro</string>
    <string name="december">Dezembro</string>
    <string name="icon">Ícone</string>
    <string name="your_transactions">Suas Transações</string>
    <string name="monthly_budget">Orçamento Mensal</string>
    <string name="your_expenses">Suas Depesas</string>
    <string name="add_your_transaction_for_this_month">Adicione sua transação para este mês</string>
    <string name="recent_transactions">Transações Recentes</string>
    <string name="drawericon">drawerIcon</string>
    <string name="name">Nome :</string>
    <string name="edit">editar</string>
    <string name="settings">Configurações</string>
    <string name="darkmode">Modo Escuro</string>
    <string name="share_to_friends">Compartilhe com seus Amigos</string>
    <string name="about_us">Sobre Nós</string>
    <string name="rate_us_on_appstore">Avalie-nos na Play Store</string>
    <string name="transaction_details">Detalhes da transação</string>
    <string name="update_details">Detalhes das Atualizações</string>
    <string name="update">Atualizar</string>
    <string name="dashboard">Painel</string>
    <string name="transactions">Transações</string>
    <string name="profile">Perfil</string>
    <string name="dark_mode">Modo Escuro</string>
    <string name="share">Compartilhar</string>
    <string name="rate_us">Avalie</string>
    <string name="yearly_budget">Orçamento Anual</string>
    <string name="fingerprint_protection">Impressão Digital</string>
    <string name="signup_with_google">Login Temporário</string>
    <string name="fiap">Douglas Pinheiro RM93863 - Fiap 2023</string>
    <string name="we_require_your_google_account_with_google_drive_permission_to_keep_backup_of_all_your_data">Somente com sua conta Google e permissão do Google Drive permite fazer backup dos seus dados.</string>
    <string name="expense_tracking">Controle Financeiro :)</string>
    <string name="simple">BUFUNFATECH</string>
    <string name="backup_data">Backup de Dados</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Olá fragmento em branco</string>
    <string name="drive_backup">Drive Backup</string>
    <string name="last_backup">Último Backup</string>
    <string name="back_up_your_data_to_google_drive_you_can_restore_them_when_you_reinstall_buckoid_app_and_signin_with_google_account">Faça backup de seus dados no Google Drive. Você pode restaurá-los ao reinstalar o aplicativo BufunfaTech e fazer login com a Conta do Google.</string>
    <string name="we_strongly_recommend_that_you_take_backup_regularly_from_the_app_as_backup_to_google_drive_is_not_automatic_doing_so_would_keep_your_data_safe_even_if_your_device_is_lost_damaged">Recomendamos fortemente que você faça backup regularmente do aplicativo (já que o backup no Google Drive não é automático). Fazer isso manteria seus dados seguros, mesmo se seu dispositivo fosse perdido/danificado.</string>
    <string name="google_drive_setting">Google Drive Configurações</string>
    <string name="transaction_details_backed_up_in_google_drive_are_not_protected_by_buckoid_end_to_end_encryption">Os detalhes das transações armazenadas em backup no Google Drive não são protegidos pela criptografia BufunfaTech de ponta a ponta.</string>
    <string name="google_account">Conta Google</string>
</resources>