<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.dgsdev.bufunfatech.fragments.Authentication.UserSignUp">

    <LinearLayout
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:layout_margin="24dp"
            android:src="@drawable/logo_round" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/simple"
            android:layout_margin="12dp"
            android:textColor="@color/textPrimary"
            android:textSize="42sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expense_tracking"
            android:layout_margin="12dp"
            android:textColor="@color/textPrimary"
            android:textSize="32sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fiap"
            android:layout_margin="12dp"
            android:textColor="@color/textPrimary"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/we_require_your_google_account_with_google_drive_permission_to_keep_backup_of_all_your_data"
        android:textColor="@color/textSecondary"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/google_signUp"
        app:layout_constraintTop_toBottomOf="@+id/text"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/google_signUp"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/cardBackground"
        android:drawableLeft="@drawable/ic_google_icon"
        android:paddingStart="42dp"
        android:paddingEnd="42dp"
        android:text="@string/signup_with_google"
        android:textColor="@color/textPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>